# fastapi

./: .gitignore  Dockerfile  README.md  docker-compose.yml  guvicorn_conf.py  main.py  pyproject.toml  requirements.txt
app/: app.py  main.py
app/routers/auth/: auth.py  models.py
app/routers/todos/: models.py  todos.py
app/tests/: conftest.py
app/utils/: config.py  db.py  logger.py
